--- a/BWKbot.html
+++ b/BWKbot.html
@@ -36,34 +36,36 @@
 </div>
 <div class="container well col-md-9 col-md-offset-1">
 <div class="container col-md-8 col-md-offset-2 board">
-
-<div class="container col-md-2 block A1">A1</div>
-<div class="container col-md-2 block A2">A2</div>
-<div class="container col-md-2 block A3">A3</div>
-<div class="container col-md-2 block A4">A4</div>
-<div class="container col-md-2 block A5">A5</div>
-<div class="container col-md-2 block A6">A6</div>
-<div class="container col-md-2 block A7">A7</div>
-<div class="container col-md-2 block A8">A8</div>
-
-<div class="container col-md-2 block B1">B1</div>
-<div class="container col-md-2 block B2">B2</div>
-<div class="container col-md-2 block B3">B3</div>
-<div class="container col-md-2 block B4">B4</div>
-<div class="container col-md-2 block B5">B5</div>
-<div class="container col-md-2 block B6">B6</div>
-<div class="container col-md-2 block B7">B7</div>
-<div class="container col-md-2 block B8">B8</div>
-
-<div class="container col-md-2 block C1">C1</div>
-<div class="container col-md-2 block C2">C2</div>
-<div class="container col-md-2 block C3">C3</div>
-<div class="container col-md-2 block C4">C4</div>
-<div class="container col-md-2 block C5">C5</div>
-<div class="container col-md-2 block C6">C6</div>
-<div class="container col-md-2 block C7">C7</div>
-<div class="container col-md-2 block C8">C8</div>
-
+<div class="row col-md-8 col-md-offset2">
+<div class="container col-md-1 block A1">A1</div>
+<div class="container col-md-1 block A2">A2</div>
+<div class="container col-md-1 block A3">A3</div>
+<div class="container col-md-1 block A4">A4</div>
+<div class="container col-md-1 block A5">A5</div>
+<div class="container col-md-1 block A6">A6</div>
+<div class="container col-md-1 block A7">A7</div>
+<div class="container col-md-1 block A8">A8</div>
+</div>
+<div class="row col-md-8 col-md-offset2">
+<div class="container col-md-1 block B1">B1</div>
+<div class="container col-md-1 block B2">B2</div>
+<div class="container col-md-1 block B3">B3</div>
+<div class="container col-md-1 block B4">B4</div>
+<div class="container col-md-1 block B5">B5</div>
+<div class="container col-md-1 block B6">B6</div>
+<div class="container col-md-1 block B7">B7</div>
+<div class="container col-md-1 block B8">B8</div>
+</div>
+<div class="row col-md-8 col-md-offset2">
+<div class="container col-md-1 block C1">C1</div>
+<div class="container col-md-1 block C2">C2</div>
+<div class="container col-md-1 block C3">C3</div>
+<div class="container col-md-1 block C4">C4</div>
+<div class="container col-md-1 block C5">C5</div>
+<div class="container col-md-1 block C6">C6</div>
+<div class="container col-md-1 block C7">C7</div>
+<div class="container col-md-1 block C8">C8</div>
+</div>
   The Board.
 </div>
 <div class="row col-md-8 col-md-offset-2">
