--- a/BWKbot.html
+++ b/BWKbot.html
@@ -36,7 +36,7 @@
 </div>
 <div class="container well col-md-9 col-md-offset-1">
 <div class="container col-md-8 col-md-offset-2 board">
-<div class="row col-md-8 col-md-offset2">
+<div class="row col-md-12">
 <div class="container col-md-1 block A1">A1</div>
 <div class="container col-md-1 block A2">A2</div>
 <div class="container col-md-1 block A3">A3</div>
@@ -46,7 +46,7 @@
 <div class="container col-md-1 block A7">A7</div>
 <div class="container col-md-1 block A8">A8</div>
 </div>
-<div class="row col-md-8 col-md-offset2">
+<div class="row col-md-12">
 <div class="container col-md-1 block B1">B1</div>
 <div class="container col-md-1 block B2">B2</div>
 <div class="container col-md-1 block B3">B3</div>
@@ -56,7 +56,7 @@
 <div class="container col-md-1 block B7">B7</div>
 <div class="container col-md-1 block B8">B8</div>
 </div>
-<div class="row col-md-8 col-md-offset2">
+<div class="row col-md-12">
 <div class="container col-md-1 block C1">C1</div>
 <div class="container col-md-1 block C2">C2</div>
 <div class="container col-md-1 block C3">C3</div>
@@ -66,7 +66,9 @@
 <div class="container col-md-1 block C7">C7</div>
 <div class="container col-md-1 block C8">C8</div>
 </div>
+<div class="row col-md-8 col-md-offset2">
   The Board.
+</div>
 </div>
 <div class="row col-md-8 col-md-offset-2">
 <button class='qb1'>Play!</button>
