--- a/BWKbot.html
+++ b/BWKbot.html
@@ -45,6 +45,7 @@
 <div class="container col-md-1 block A6">A6</div>
 <div class="container col-md-1 block A7">A7</div>
 <div class="container col-md-1 block A8">A8</div>
+<div class="row container well col-md-4"> Total: </div>
 </div>
 <div class="row col-md-12">
 <div class="container col-md-1 block B1">B1</div>
