--- a/BWKbot.html
+++ b/BWKbot.html
@@ -48,6 +48,7 @@
 <div class="row container col-md-2 block"></div>
 <div class="row container col-md-2 block"> Count: </div>
 </div>
+
 <div class="row col-md-12">
 <div class="container col-md-1 block B1">B1</div>
 <div class="container col-md-1 block B2">B2</div>
@@ -57,7 +58,10 @@
 <div class="container col-md-1 block B6">B6</div>
 <div class="container col-md-1 block B7">B7</div>
 <div class="container col-md-1 block B8">B8</div>
+<div class="row container col-md-2 block"></div>
+<div class="row container col-md-2 block"> Count: </div>
 </div>
+
 <div class="row col-md-12">
 <div class="container col-md-1 block C1">C1</div>
 <div class="container col-md-1 block C2">C2</div>
@@ -67,21 +71,22 @@
 <div class="container col-md-1 block C6">C6</div>
 <div class="container col-md-1 block C7">C7</div>
 <div class="container col-md-1 block C8">C8</div>
+<div class="row container col-md-2 block"></div>
+<div class="row container col-md-2 block"> Count: </div>
 </div>
-<div class="row col-md-8 col-md-offset2">
+
+<div class="row col-md-8 col-md-offset-2">
   The Board.
 </div>
-</div>
+<div class="row col-md-8 col-md-offset-2"></div>
 <div class="row col-md-8 col-md-offset-2">
 <button class='qb1'>Play!</button>
 </div>
 <div class="row col-md-8 col-md-offset-2">
 </div>
-<br>
 
 <div class="container well col-md-8 col-md-offset-2">
   <span class='output1'></span>
-</div>
 </div>
 <div class="container col-md-10 col-md-offset-1">
 <p class='lead'>Back to <a href="https://leahw.github.io/"> leahw.github.io </a></p>
