--- a/BWKbot.html
+++ b/BWKbot.html
@@ -11,7 +11,7 @@
 }
 .board {
   background: #145E5E;
-  color: #FFFFF5;
+  color: #171717;
 }
 .block {
   background: #004200;
@@ -76,10 +76,9 @@
 </div>
 
 <div class="row col-md-8 col-md-offset-2">
-  The Board.
 </div>
 <div class="row col-md-8 col-md-offset-2"></div>
-<div class="row col-md-8 col-md-offset-2">
+<div class="row col-md-8">
 <button class='qb1'>Play!</button>
 </div>
 <div class="row col-md-8 col-md-offset-2">
