--- a/BWKbot.html
+++ b/BWKbot.html
@@ -10,11 +10,11 @@
   width: 1px;
 }
 .board {
-  background: #741E1E;
+  background: #54541E;
   color: #171717;
 }
 .block {
-  background: #004200;
+  background: #304230;
   color: #EDEDA3;
 }
 .alive {
