--- a/BWKbot.html
+++ b/BWKbot.html
@@ -78,8 +78,11 @@
 <div class="row col-md-8 col-md-offset-2">
 </div>
 <div class="row col-md-8 col-md-offset-2"></div>
-<div class="row col-md-8">
-<button class='qb1'>Play!</button>
+<div class="row col-md-4">
+<button class='qb1'>Set Bits</button>
+</div>
+<div class="row col-md-4">
+  <button class='qb2'>Calulate</button>
 </div>
 <div class="row col-md-8 col-md-offset-2">
 </div>
