--- a/BWKbot.html
+++ b/BWKbot.html
@@ -10,7 +10,7 @@
   width: 1px;
 }
 .board {
-  background: #54241E;
+  background: #481220;
   color: #171717;
 }
 .block {
@@ -81,7 +81,8 @@
 <div class="row col-md-4">
 <button class='qb1'>Set Bits</button>
 </div>
-<div class="row col-md-4">
+<div class="row col-md-6"></div>
+<div class="row col-md-2">
   <button class='qb2'>Calulate</button>
 </div>
 <div class="row col-md-8 col-md-offset-2">
