--- a/BWKbot.html
+++ b/BWKbot.html
@@ -11,7 +11,7 @@
 }
 .board {
   background: #481220;
-  color: #171717;
+  color: #304230;
 }
 .block {
   background: #304230;
@@ -85,7 +85,7 @@
 <div class="row col-md-2">
   <button class='qb2'>Calulate</button>
 </div>
-<div class="row col-md-8 col-md-offset-2">
+<div class="row col-md-12">
 </div>
 
 <div class="container well col-md-8 col-md-offset-2">
