--- a/BWKbot.html
+++ b/BWKbot.html
@@ -11,7 +11,7 @@
 }
 .board {
   background: #481220;
-  color: #304230;
+  color: #101250;
 }
 .block {
   background: #304230;
@@ -84,6 +84,8 @@
 <div class="row col-md-6"></div>
 <div class="row col-md-2">
   <button class='qb2'>Calulate</button>
+</div>
+<div class="row col-md-12">
 </div>
 <div class="row col-md-12">
 </div>
