--- a/BWKbot.html
+++ b/BWKbot.html
@@ -11,7 +11,7 @@
 }
 .board {
   background: #481220;
-  color: #101250;
+  color: #405290;
 }
 .block {
   background: #304230;
@@ -75,19 +75,19 @@
 <div class="row container col-md-2 block"> Count: <span class="countC"></span></div>
 </div>
 
-<div class="row col-md-8 col-md-offset-2">
+<div class="row container col-md-8 col-md-offset-2">
 </div>
-<div class="row col-md-8 col-md-offset-2"></div>
-<div class="row col-md-4">
+<div class="row container col-md-8 col-md-offset-2"></div>
+<div class="row container col-md-4">
 <button class='qb1'>Set Bits</button>
 </div>
-<div class="row col-md-6"></div>
-<div class="row col-md-2">
+<div class="row container col-md-6"></div>
+<div class="row container col-md-2">
   <button class='qb2'>Calulate</button>
 </div>
-<div class="row col-md-12">
+<div class="row container col-md-12">
 </div>
-<div class="row col-md-12">
+<div class="row container col-md-12">
 </div>
 
 <div class="container well col-md-8 col-md-offset-2">
