--- a/BWKbot.html
+++ b/BWKbot.html
@@ -46,7 +46,7 @@
 <div class="container col-md-1 block A7">A7</div>
 <div class="container col-md-1 block A8">A8</div>
 <div class="row container col-md-2 block"></div>
-<div class="row container col-md-2 block"> Count:<span class="countA"></span> </div>
+<div class="row container col-md-2 block"> Count: <span class="countA"></span> </div>
 </div>
 
 <div class="row col-md-12">
@@ -59,7 +59,7 @@
 <div class="container col-md-1 block B7">B7</div>
 <div class="container col-md-1 block B8">B8</div>
 <div class="row container col-md-2 block"></div>
-<div class="row container col-md-2 block"> Count:<span class="countB"></span> </div>
+<div class="row container col-md-2 block"> Count: <span class="countB"></span> </div>
 </div>
 
 <div class="row col-md-12">
@@ -72,7 +72,7 @@
 <div class="container col-md-1 block C7">C7</div>
 <div class="container col-md-1 block C8">C8</div>
 <div class="row container col-md-2 block"></div>
-<div class="row container col-md-2 block"> Count: <span class="countC"></span></div>
+<div class="row container col-md-2 block"> Count: <span class="countC"></span> </div>
 </div>
 
 <div class="row container col-md-8 col-md-offset-2">
@@ -138,6 +138,7 @@
         $('.colBtn1').on('click', function() {
           $('.colSpan').addClass('hide');
           $('.A1').toggleClass('alive');
+          countA=countA+1;
         });
         $('.colBtn2').on('click', function() {
           $('.colSpan').addClass('hide');
