--- a/BWKbot.html
+++ b/BWKbot.html
@@ -62,6 +62,10 @@
 <div class="row container col-md-2 block"> Count: <span class="countB"></span> </div>
 </div>
 
+<div class="row container col-md-12">
+<br>
+</div>
+
 <div class="row col-md-12">
 <div class="container col-md-1 block C1">C1</div>
 <div class="container col-md-1 block C2">C2</div>
@@ -73,6 +77,10 @@
 <div class="container col-md-1 block C8">C8</div>
 <div class="row container col-md-2 block"></div>
 <div class="row container col-md-2 block"> Count: <span class="countC"></span> </div>
+</div>
+
+<div class="row container col-md-12">
+<br>
 </div>
 
 <div class="row container col-md-8 col-md-offset-2">
