--- a/BWKbot.html
+++ b/BWKbot.html
@@ -49,6 +49,10 @@
 <div class="row container col-md-2 block"> Count: <span class="countA"></span> </div>
 </div>
 
+<div class="row container col-md-12">
+<br>
+</div>
+
 <div class="row col-md-12">
 <div class="container col-md-1 block B1">B1</div>
 <div class="container col-md-1 block B2">B2</div>
