--- a/BWKbot.html
+++ b/BWKbot.html
@@ -55,14 +55,14 @@
 </div>
 
 <div class="row col-md-12">
-<div class="container col-md-1 block B1">  </div>
-<div class="container col-md-1 block B2">  </div>
-<div class="container col-md-1 block B3">  </div>
-<div class="container col-md-1 block B4">  </div>
-<div class="container col-md-1 block B5">  </div>
-<div class="container col-md-1 block B6">  </div>
-<div class="container col-md-1 block B7">  </div>
-<div class="container col-md-1 block B8">  </div>
+<div class="container col-md-1 block B1"> - </div>
+<div class="container col-md-1 block B2"> - </div>
+<div class="container col-md-1 block B3"> - </div>
+<div class="container col-md-1 block B4"> - </div>
+<div class="container col-md-1 block B5"> - </div>
+<div class="container col-md-1 block B6"> - </div>
+<div class="container col-md-1 block B7"> - </div>
+<div class="container col-md-1 block B8"> - </div>
 <div class="row container col-md-2 block"></div>
 <div class="row container col-md-2 block"> Count: <span class="countB"></span> </div>
 </div>
