--- a/BWKbot.html
+++ b/BWKbot.html
@@ -38,15 +38,16 @@
 <div class="container col-md-8 col-md-offset-2 board">
 <div class="row container col-md-12">
 <br>
-<div class="container col-md-1 block A1">A1</div>
-<div class="container col-md-1 block A2">A2</div>
-<div class="container col-md-1 block A3">A3</div>
-<div class="container col-md-1 block A4">A4</div>
-<div class="container col-md-1 block A5">A5</div>
-<div class="container col-md-1 block A6">A6</div>
-<div class="container col-md-1 block A7">A7</div>
-<div class="container col-md-1 block A8">A8</div>
-<div class="row container col-md-2 block"></div>
+<div class="row container col-md-1 block"> A </div>
+<div class="container col-md-1 block A1"> - </div>
+<div class="container col-md-1 block A2"> - </div>
+<div class="container col-md-1 block A3"> - </div>
+<div class="container col-md-1 block A4"> - </div>
+<div class="container col-md-1 block A5"> - </div>
+<div class="container col-md-1 block A6"> - </div>
+<div class="container col-md-1 block A7"> - </div>
+<div class="container col-md-1 block A8"> - </div>
+<div class="row container col-md-1 block"></div>
 <div class="row container col-md-2 block"> Count: <span class="countA"></span> </div>
 </div>
 
