--- a/BWKbot.html
+++ b/BWKbot.html
@@ -39,6 +39,7 @@
 <div class="row container col-md-12">
 <br>
 <div class="row container col-md-1 block"> A </div>
+<div class="row container col-md-1 block">  </div>
 <div class="container col-md-1 block A1"> - </div>
 <div class="container col-md-1 block A2"> - </div>
 <div class="container col-md-1 block A3"> - </div>
