--- a/BWKbot.html
+++ b/BWKbot.html
@@ -48,7 +48,7 @@
 <div class="container col-md-1 block A6"> - </div>
 <div class="container col-md-1 block A7"> - </div>
 <div class="container col-md-1 block A8"> - </div>
-<div class="row container col-md-1 block"></div>
+<div class="row container col-md-2 block"></div>
 <div class="row container col-md-2 block"> Count: <span class="countA"></span> </div>
 </div>
 
@@ -80,14 +80,14 @@
 <br>
 <div class="row container col-md-1 block"> 3 </div>
 <div class="row container col-md-1 block">  </div>
-<div class="container col-md-1 block C1">C1</div>
-<div class="container col-md-1 block C2">C2</div>
-<div class="container col-md-1 block C3">C3</div>
-<div class="container col-md-1 block C4">C4</div>
-<div class="container col-md-1 block C5">C5</div>
-<div class="container col-md-1 block C6">C6</div>
-<div class="container col-md-1 block C7">C7</div>
-<div class="container col-md-1 block C8">C8</div>
+<div class="container col-md-1 block C1"> - </div>
+<div class="container col-md-1 block C2"> - </div>
+<div class="container col-md-1 block C3"> - </div>
+<div class="container col-md-1 block C4"> - </div>
+<div class="container col-md-1 block C5"> - </div>
+<div class="container col-md-1 block C6"> - </div>
+<div class="container col-md-1 block C7"> - </div>
+<div class="container col-md-1 block C8"> - </div>
 <div class="row container col-md-2 block"></div>
 <div class="row container col-md-2 block"> Count: <span class="countC"></span> </div>
 </div>
