--- a/BWKbot.html
+++ b/BWKbot.html
@@ -124,6 +124,7 @@
  var countC = 0;
  
  $('.qb2').on('click', function() {
+   $('.countA').replaceAll('.countA');
    $('.countA').append(countA);
    $('.countB').append(countB);
    $('.countC').append(countC);
