--- a/BWKbot.html
+++ b/BWKbot.html
@@ -124,10 +124,10 @@
  var countC = 0;
  
  $('.qb2').on('click', function() {
-   $('.countA').replaceAll('.countA');
    $('.countA').append(countA);
    $('.countB').append(countB);
    $('.countC').append(countC);
+   $('.qb2').addClass('hide');
  });
   
   $('.qb1').on('click', function() {
