--- a/BWKbot.html
+++ b/BWKbot.html
@@ -104,6 +104,7 @@
 <div class="row container col-md-6"></div>
 <div class="row container col-md-2">
   <button class='qb2'>Calculate</button>
+  <button class='qb3 hide'><a href="https://leahw.github.io/BWKbot.html">Reset</a></button>
 </div>
 <div class="row container col-md-12">
 <br>
@@ -128,6 +129,7 @@
    $('.countB').append(countB);
    $('.countC').append(countC);
    $('.qb2').addClass('hide');
+   $('.qb3').removeClass('hide');
  });
   
   $('.qb1').on('click', function() {
@@ -155,42 +157,42 @@
         colQuestion.ask();
         $('.colBtn1').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.A1').toggleClass('alive');
+          $('.A1').addClass('alive');
           countA=countA+128;
         });
         $('.colBtn2').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.A2').toggleClass('alive');
+          $('.A2').addClass('alive');
           countA=countA+64;
         });
         $('.colBtn3').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.A3').toggleClass('alive');
+          $('.A3').addClass('alive');
           countA=countA+32;
         });
         $('.colBtn4').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.A4').toggleClass('alive');
+          $('.A4').addClass('alive');
           countA=countA+16;
         });
         $('.colBtn5').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.A5').toggleClass('alive');
+          $('.A5').addClass('alive');
           countA=countA+8;
         });
         $('.colBtn6').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.A6').toggleClass('alive');
+          $('.A6').addClass('alive');
           countA=countA+4;
         });
         $('.colBtn7').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.A7').toggleClass('alive');
+          $('.A7').addClass('alive');
           countA=countA+2;
       });
       $('.colBtn8').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.A8').toggleClass('alive');
+          $('.A8').addClass('alive');
           countA=countA+1;
       });
     });
@@ -201,42 +203,42 @@
         colQuestion.ask();
         $('.colBtn1').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.B1').toggleClass('alive');
+          $('.B1').addClass('alive');
           countB=countB+128;
         });
         $('.colBtn2').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.B2').toggleClass('alive');
+          $('.B2').addClass('alive');
           countB=countB+64;
         });
         $('.colBtn3').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.B3').toggleClass('alive');
+          $('.B3').addClass('alive');
           countB=countB+32;
         });
         $('.colBtn4').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.B4').toggleClass('alive');
+          $('.B4').addClass('alive');
           countB=countB+16;
         });
         $('.colBtn5').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.B5').toggleClass('alive');
+          $('.B5').addClass('alive');
           countB=countB+8;
         });
         $('.colBtn6').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.B6').toggleClass('alive');
+          $('.B6').addClass('alive');
           countB=countB+4;
         });
         $('.colBtn7').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.B7').toggleClass('alive');
+          $('.B7').addClass('alive');
           countB=countB+2;
       });
       $('.colBtn8').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.B8').toggleClass('alive');
+          $('.B8').addClass('alive');
           countB=countB+1;
       });
     });
@@ -247,42 +249,42 @@
         colQuestion.ask();
         $('.colBtn1').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.C1').toggleClass('alive');
+          $('.C1').addClass('alive');
           countC=countC+128;
         });
         $('.colBtn2').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.C2').toggleClass('alive');
+          $('.C2').addClass('alive');
           countC=countC+64;
         });
         $('.colBtn3').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.C3').toggleClass('alive');
+          $('.C3').addClass('alive');
           countC=countC+32;
         });
         $('.colBtn4').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.C4').toggleClass('alive');
+          $('.C4').addClass('alive');
           countC=countC+16;
         });
         $('.colBtn5').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.C5').toggleClass('alive');
+          $('.C5').addClass('alive');
           countC=countC+8;
         });
         $('.colBtn6').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.C6').toggleClass('alive');
+          $('.C6').addClass('alive');
           countC=countC+4;
         });
         $('.colBtn7').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.C7').toggleClass('alive');
+          $('.C7').addClass('alive');
           countC=countC+2;
       });
       $('.colBtn8').on('click', function() {
           $('.colSpan').addClass('hide');
-          $('.C8').toggleClass('alive');
+          $('.C8').addClass('alive');
           countC=countC+1;
       });
       });
