--- a/BWKbot.html
+++ b/BWKbot.html
@@ -290,7 +290,7 @@
       });
   });
   function A8() {
-    $('.A8').addClass('alive');
+    document.getElementById("A8").addClass("alive");
     countA=countA+128;
   };
    
