--- a/BWKbot.html
+++ b/BWKbot.html
@@ -40,7 +40,7 @@
 <br>
 <div class="row container col-md-1 block"> 1 </div>
 <div class="row container col-md-1 block">  </div>
-<div class="container col-md-1 block A8" id="A8" onclick="funcA8()"> - </div>
+<div class="container col-md-1 block A8"> - </div>
 <div class="container col-md-1 block A2"> - </div>
 <div class="container col-md-1 block A3"> - </div>
 <div class="container col-md-1 block A4"> - </div>
@@ -289,10 +289,10 @@
       });
       });
   });
-  function A8() {
-    document.getElementById("A8").addClass("alive");
-    countA=countA+128;
-  };
+ $('.A8').on('click', function() {
+   $('.A8').addClass('alive');
+   countA=countA+128;
+ });
    
 </script>
 
