--- a/BWKbot.html
+++ b/BWKbot.html
@@ -166,6 +166,71 @@
    countA=countA+1;
  });
  
+ $('.B8').on('click', function() {
+   $('.B8').addClass('alive');
+   countB=countB+128;
+ });
+  $('.B7').on('click', function() {
+   $('.B7').addClass('alive');
+   countB=countB+64;
+ });
+  $('.B6').on('click', function() {
+   $('.B6').addClass('alive');
+   countB=countB+32;
+ });
+  $('.B5').on('click', function() {
+   $('.B5').addClass('alive');
+   countB=countB+16;
+ });
+  $('.B4').on('click', function() {
+   $('.B4').addClass('alive');
+   countB=countB+8;
+ });
+  $('.B3').on('click', function() {
+   $('.B3').addClass('alive');
+   countB=countB+4;
+ });
+  $('.B2').on('click', function() {
+   $('.B2').addClass('alive');
+   countB=countB+2;
+ });
+  $('.B1').on('click', function() {
+   $('.B1').addClass('alive');
+   countB=countB+1;
+ });
+ 
+ $('.C8').on('click', function() {
+   $('.C8').addClass('alive');
+   countC=countC+128;
+ });
+  $('.C7').on('click', function() {
+   $('.C7').addClass('alive');
+   countC=countC+64;
+ });
+  $('.C6').on('click', function() {
+   $('.C6').addClass('alive');
+   countC=countC+32;
+ });
+  $('.C5').on('click', function() {
+   $('.C5').addClass('alive');
+   countC=countC+16;
+ });
+  $('.C4').on('click', function() {
+   $('.C4').addClass('alive');
+   countC=countC+8;
+ });
+  $('.C3').on('click', function() {
+   $('.C3').addClass('alive');
+   countC=countC+4;
+ });
+  $('.C2').on('click', function() {
+   $('.C2').addClass('alive');
+   countC=countC+2;
+ });
+  $('.C1').on('click', function() {
+   $('.C1').addClass('alive');
+   countC=countC+1;
+ });
  
    
 </script>
