--- a/BWKbot.html
+++ b/BWKbot.html
@@ -35,7 +35,7 @@
 <div class="container col-md-8 col-md-offset-2 board">
 <div class="row container col-md-12">
 <br>
-<div class="row container col-md-1 block"> 1 </div>
+<div class="row container col-md-1 block1">   </div>
 <div class="row container col-md-1 block">  </div>
 <div class="container col-md-1 block A8"> - </div>
 <div class="container col-md-1 block A7"> - </div>
@@ -55,7 +55,7 @@
 
 <div class="row col-md-12">
 <br>
-<div class="row container col-md-1 block"> 2 </div>
+<div class="row container col-md-1 block2">   </div>
 <div class="row container col-md-1 block">  </div>
 <div class="container col-md-1 block B8"> - </div>
 <div class="container col-md-1 block B7"> - </div>
@@ -75,7 +75,7 @@
 
 <div class="row col-md-12">
 <br>
-<div class="row container col-md-1 block"> 3 </div>
+<div class="row container col-md-1 block3">   </div>
 <div class="row container col-md-1 block">  </div>
 <div class="container col-md-1 block C8"> - </div>
 <div class="container col-md-1 block C7"> - </div>
@@ -96,7 +96,7 @@
 <br>
 </div>
 <div class="row container col-md-4">
-<button class='qb1'>*</button>
+<button class='qb1'>UTF-8</button>
 </div>
 <div class="row container col-md-6"></div>
 <div class="row container col-md-2">
@@ -230,6 +230,14 @@
   $('.C1').on('click', function() {
    $('.C1').addClass('alive');
    countC=countC+1;
+ });
+ 
+ // UTF-8 lookup
+ var utf8 = ["NUL", "SOH", "STX", "ETX"];
+ 
+ $('.qb1').on('click', function() {
+   $('.block1').append(utf8[countA]);
+   $('.qb1').addClass('hide');
  });
  
    
