--- a/BWKbot.html
+++ b/BWKbot.html
@@ -17,6 +17,15 @@
   background: #503250;
   color: #EDEDA3;
 }
+.block1 {
+  color: #FFADFF;
+}
+.block2 {
+  color: #FFADFF;
+}
+.block3 {
+  color: #FFADFF;
+}
 .alive {
   background: #66FF33;
   color: #000000;
