--- a/BWKbot.html
+++ b/BWKbot.html
@@ -243,7 +243,8 @@
  
  // UTF-8 lookup
  var utf8 = ["NUL", "SOH", "STX", "ETX", "EOT", "ENQ", "ACK", "BEL", "BS", "HT", "LF", "VT", "FF", "CR", "SO", "SI", "DLE",
-  "DC1", "DC2", "DC3", "DC4", "NAK", "SYN", "ETB", "CAN", "EM", "SUB", "ESC", "FS", "GS", "RS", "US", "SP", "!"];
+  "DC1", "DC2", "DC3", "DC4", "NAK", "SYN", "ETB", "CAN", "EM", "SUB", "ESC", "FS", "GS", "RS", "US", "SP", "!", "\"", "#", "$",
+   "%", "&", "\'", "(", ")", "*", "+", ",", "-", ".", "backslash"];
  
  $('.qb1').on('click', function() {
    $('.block1').append(utf8[countA]);
