--- a/BWKbot.html
+++ b/BWKbot.html
@@ -19,12 +19,15 @@
 }
 .block1 {
   color: #FFADFF;
+  font-size: 200%;
 }
 .block2 {
   color: #FFADFF;
+  font-size: 200%;
 }
 .block3 {
   color: #FFADFF;
+  font-size: 200%;
 }
 .alive {
   background: #66FF33;
@@ -244,7 +247,7 @@
  // UTF-8 lookup
  var utf8 = ["NUL", "SOH", "STX", "ETX", "EOT", "ENQ", "ACK", "BEL", "BS", "HT", "LF", "VT", "FF", "CR", "SO", "SI", "DLE",
   "DC1", "DC2", "DC3", "DC4", "NAK", "SYN", "ETB", "CAN", "EM", "SUB", "ESC", "FS", "GS", "RS", "US", "SP", "!", "\"", "#", "$",
-   "%", "&", "\'", "(", ")", "*", "+", ",", "-", ".", "backslash"];
+   "%", "&", "\'", "(", ")", "*", "+", ",", "-", ".", "&#92"];
  
  $('.qb1').on('click', function() {
    $('.block1').append(utf8[countA]);
