--- a/BWKbot.html
+++ b/BWKbot.html
@@ -98,18 +98,18 @@
 <div class="row container col-md-2 block"> Count: <span class="countC"></span> </div>
 </div>
 
-<div class="row container col-md-8 col-md-offset-2">
-</div>
-<div class="row container col-md-8 col-md-offset-2"></div>
 <div class="row container col-md-12">
 <br>
+</div>
+<div class="row container col-md-12">
+  <br>
 </div>
 <div class="row container col-md-4">
 <button class='qb1'>UTF-8</button>
 </div>
-<div class="row container col-md-6"></div>
+<div class="row container col-md-5"></div>
 <div class="row container col-md-2">
-  <button class='qb2'>Calculate</button>
+  <button class='qb2'>Decimal</button>
   <button class='qb3 hide'><a href="https://leahw.github.io/BWKbot.html">Reset</a></button>
 </div>
 <div class="row container col-md-12">
