--- a/BWKbot.html
+++ b/BWKbot.html
@@ -106,8 +106,9 @@
 </div>
 <div class="row container col-md-4">
 <button class='qb1'>UTF-8</button>
+<button class='qb4 hide'><a href="https://leahw.github.io/BWKbot.html">Reset</a></button>
 </div>
-<div class="row container col-md-5"></div>
+<div class="row container col-md-6"></div>
 <div class="row container col-md-2">
   <button class='qb2'>Decimal</button>
   <button class='qb3 hide'><a href="https://leahw.github.io/BWKbot.html">Reset</a></button>
