--- a/BWKbot.html
+++ b/BWKbot.html
@@ -41,7 +41,10 @@
 </head>
 <body>
 <div class="container well col-md-9 col-md-offset-1">
-<p class="lead"> Welcome! </p>
+<p class="lead"> Byte Builder: </p>
+<li> Click on dashes to activate each bit and create up to three octet bytes.</li>
+<li> Use the UTF-8 button to show character assigned to this byte.</li>
+<li> Use the Calculate button to show numeric value in Decimal format.</li>
 </div>
 <div class="container well col-md-9 col-md-offset-1">
 <div class="container col-md-8 col-md-offset-2 board">
@@ -110,7 +113,7 @@
 </div>
 <div class="row container col-md-6"></div>
 <div class="row container col-md-2">
-  <button class='qb2'>Decimal</button>
+  <button class='qb2'>Calculate</button>
   <button class='qb3 hide'><a href="https://leahw.github.io/BWKbot.html">Reset</a></button>
 </div>
 <div class="row container col-md-12">
