Update and rename BWKbot.html to ByteBuilder.html

--- a/ByteBuilder.html
+++ b/ByteBuilder.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>BWK Bot</title>
+<meta charset="UTF-8">
+<meta name="description" content="In-browser JavaScript program allows you to input binary values in an octet byte format and then convert to see what those values would be in UTF-8 (Unicode, ASCII) and Decimal format">
+<meta name="author" content="Leah Williamson">
+ <meta name="viewport" content="width=device-width">
+<title>Byte Builder: An octet byte to UTF-8 and Decimal converter. </title>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <style>
 .whitespace {
@@ -41,10 +47,10 @@
 </head>
 <body>
 <div class="container well col-md-9 col-md-offset-1">
-<p class="lead"> Byte Builder: </p>
-<li> Click on dashes to activate each bit and create up to three octet bytes.</li>
-<li> Use the UTF-8 button to show character assigned to this byte.</li>
-<li> Use the Calculate button to show numeric value in Decimal format.</li>
+<h2> Byte Builder</h2>
+<li> Click on dashes to activate bits and create up to three octet bytes.</li>
+<li> The <p class="lead">UTF-8</p> button will display the character assigned to each byte.</li>
+<li> Use the <p class="lead">Calculate</p> button to show numeric values in Decimal format.</li>
 </div>
 <div class="container well col-md-9 col-md-offset-1">
 <div class="container col-md-8 col-md-offset-2 board">
