--- a/ByteBuilder.html
+++ b/ByteBuilder.html
@@ -47,10 +47,10 @@
 </head>
 <body>
 <div class="container well col-md-9 col-md-offset-1">
-<h2> Byte Builder</h2>
+<p class="lead"> Byte Builder</p>
 <li> Click on dashes to activate bits and create up to three octet bytes.</li>
-<li> The <p class="lead">UTF-8</p> button will display the character assigned to each byte.</li>
-<li> Use the <p class="lead">Calculate</p> button to show numeric values in Decimal format.</li>
+<li> The <b>UTF-8</b> button will display the character assigned to each byte.</li>
+<li> Use the <b>Calculate</b> button to show numeric values in Decimal format.</li>
 </div>
 <div class="container well col-md-9 col-md-offset-1">
 <div class="container col-md-8 col-md-offset-2 board">
