--- a/ByteBuilder.html
+++ b/ByteBuilder.html
@@ -48,7 +48,7 @@
 <body>
 <div class="container well col-md-9 col-md-offset-1">
 <p class="lead"> Byte Builder</p>
-<li> Click on dashes to activate bits and create up to three octet bytes.</li>
+<li> Click on <b>dashes</b> to activate bits and create up to three octet bytes.</li>
 <li> The <b>UTF-8</b> button will display the character assigned to each byte.</li>
 <li> Use the <b>Calculate</b> button to show numeric values in Decimal format.</li>
 </div>
