--- a/ByteBuilder.html
+++ b/ByteBuilder.html
@@ -51,6 +51,8 @@
 <li> Click on <b>dashes</b> to activate bits and create up to three octet bytes.</li>
 <li> The <b>UTF-8</b> button will display the character assigned to each byte.</li>
 <li> Use the <b>Calculate</b> button to show numeric values in Decimal format.</li>
+<br>
+<i>Note: Bytes with a Decimal value greater than 127 do not have an assigned UTF-8 value.</i>
 </div>
 <div class="container well col-md-9 col-md-offset-1">
 <div class="container col-md-8 col-md-offset-2 board">
@@ -115,12 +117,12 @@
 </div>
 <div class="row container col-md-4">
 <button class='qb1'>UTF-8</button>
-<button class='qb4 hide'><a href="https://leahw.github.io/BWKbot.html">Reset</a></button>
+<button class='qb4 hide'><a href="https://leahw.github.io/ByteBuilder.html">Reset</a></button>
 </div>
 <div class="row container col-md-6"></div>
 <div class="row container col-md-2">
   <button class='qb2'>Calculate</button>
-  <button class='qb3 hide'><a href="https://leahw.github.io/BWKbot.html">Reset</a></button>
+  <button class='qb3 hide'><a href="https://leahw.github.io/ByteBuilder.html">Reset</a></button>
 </div>
 <div class="row container col-md-12">
 <br>
