--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   </div>
   <div class="col-md-4 emptyrow"></div>
   <div class="container well col-md-4">
-   <h3><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h3>
+   <h3><a href="https://LeahW.github.io/ByteBuilder.html"> ByteBuilder </a></a></h3>
  <br>
- <p> A sandbox page for JavaScript. Frequently changes. Feel free to click around and explore! </p>
+ <p> 8-bit to UTF-8 and Decimal converter built using JavaScript.</p>
   </div>
   <div class="container well col-md-4">
    <h3><a href="https://LeahW.github.io/regex.html"> Regex </a></a></h3>
@@ -50,8 +50,7 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <p class='lead'>Welcome! This page is used to practice the computer programming skills that I'm learning at Free Code Camp, Code School, Codecademy, General Assembly and other online web tutorials and code bootcamps.
-     <br>
+     <p class='lead'>Welcome! I'm a self-taught computer programmer and use this page to practice my skills. Content frequently changes. Feel free to click around and explore!<br>
      You can also view my 
        GitHub Repository at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
