--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <p class='lead'>Welcome! I'm a self-taught computer programmer and use this page to practice my skills. Content frequently changes. Feel free to click around and explore!<br>
+     <p class='lead'>GitHub page and portfolio for LeahW.</p>
+     <br>
+     <b>Content frequently changes. Feel free to click around and explore!</b>
+     <br>
      You can also view my 
        GitHub Repository at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
