--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <meta name="keywords" content="code bootcamp, coding tutorials, Regex, Regular Expressions, HTML, CSS, JavaScript, jQuery, Bootstrap, GitHub">
  <meta name="author" content="Leah Williamson">
  <meta name="viewport" content="width=device-width">
-  <title>LeahW on GitHub: Setting Code Bootcamp Lessons Loose in the Wild </title>
+  <title>LeahW on GitHub: ByteBuilder, Regular Expression Challenges, and other side projects.</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <style>
     .whitespace {
@@ -50,14 +50,14 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <p class='lead'>GitHub page and portfolio for LeahW.</p>
+     <h2>GitHub Page and Portfolio for LeahW.</h2>
      <br>
-     <b>Content frequently changes. Feel free to click around and explore!</b>
+     <p class="lead">Content frequently changes. Feel free to click around and explore!</p>
      <br>
-     You can also view my 
+     <b>You can also view my 
        GitHub Repository at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
-    </p>
+    </b>
   </div>
 </div>
 
