--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <h2>GitHub Page and Portfolio for LeahW.</h2>
+     <h2>GitHub Page and Portfolio for LeahW</h2>
      <br>
-     <p class="lead">Content frequently changes. Feel free to click around and explore!</p>
+     <h3>Content frequently changes. Feel free to click around and explore!</h3>
      <br>
-     <b>You can also view my 
+     <p class="lead">You can also view my 
        GitHub Repository at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
-    </b>
+    </p>
   </div>
 </div>
 
