--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <h2>GitHub Page and Portfolio for LeahW</h2>
-     <br>
+     <h2><b>GitHub Page and Portfolio for LeahW</b></h2>
      <h3>Content frequently changes. Feel free to click around and explore!</h3>
      <br>
      <p class="lead">You can also view my 
