--- a/addRandom.html
+++ b/addRandom.html
@@ -122,10 +122,15 @@
 <div class="row container col-md-6"></div>
 <div class="row container col-md-2">
   <button class='qb2'>Calculate</button>
-  <button class='qb3 hide'><a href="https://leahw.github.io/ByteBuilder.html">Reset</a></button>
+  <button class='qb3 hide' onclick="https://leahw.github.io/ByteBuilder.html">Reset</button>
 </div>
 <div class="row container col-md-12">
 <br>
+</div>
+<br>
+<div class="container well col-md-9 col-md-offset-1">
+<p class="lead"> Experimental functions:</p>
+<button class="randomBtn"> Random </button>
 </div>
 
 <div class="container col-md-10 col-md-offset-1">
