--- a/addRandom.html
+++ b/addRandom.html
@@ -117,26 +117,27 @@
 </div>
 <div class="row container col-md-4">
 <button class='qb1'>UTF-8</button>
-<button class='qb4 hide'><a href="https://leahw.github.io/ByteBuilder.html">Reset</a></button>
+<button class='qb4 hide'><a href="https://leahw.github.io/addRandom.html">Reset</a></button>
 </div>
 <div class="row container col-md-6"></div>
 <div class="row container col-md-2">
   <button class='qb2'>Calculate</button>
-  <button class='qb3 hide' onclick="https://leahw.github.io/ByteBuilder.html">Reset</button>
+  <button class='qb3 hide' type="submit">Submit</button>
 </div>
 <div class="row container col-md-12">
 <br>
 </div>
 <br>
-<div class="container well col-md-9 col-md-offset-1">
-<p class="lead"> Experimental functions:</p>
-<button class="randomBtn"> Random </button>
-</div>
 
 <div class="container col-md-10 col-md-offset-1">
 <p class='lead'>Back to <a href="https://leahw.github.io/"> leahw.github.io </a></p>
 </div>
 
+<div class="container well col-md-9 col-md-offset-1">
+<p class="lead"> Experimental functions:</p>
+<button class="randomBtn"> Random </button>
+</div>
+</body>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
@@ -269,6 +270,12 @@
    $('.block3').append(utf8[countC]);
    $('.qb1').addClass('hide');
  });
+ 
+ // Random attempts
+ 
+ <form action="http://google.com">
+    <input type="submit" value="Go to Google">
+</form>
  
    
 </script>
