--- a/addRandom.html
+++ b/addRandom.html
@@ -122,7 +122,11 @@
 <div class="row container col-md-6"></div>
 <div class="row container col-md-2">
   <button class='qb2'>Calculate</button>
-  <button class='qb3 hide' type="submit">Submit</button>
+   <form class="qb3 hide" action="https://leahw.github.io/addRandom.html">
+    <input type="submit" value="Reset Form">
+</form>
+ 
+   
 </div>
 <div class="row container col-md-12">
 <br>
@@ -137,7 +141,7 @@
 <p class="lead"> Experimental functions:</p>
 <button class="randomBtn"> Random </button>
 </div>
-</body>
+
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
@@ -273,11 +277,6 @@
  
  // Random attempts
  
- <form action="http://google.com">
-    <input type="submit" value="Go to Google">
-</form>
- 
-   
 </script>
 
 </body>
