--- a/ByteBuilder.html
+++ b/ByteBuilder.html
@@ -117,12 +117,16 @@
 </div>
 <div class="row container col-md-4">
 <button class='qb1'>UTF-8</button>
-<button class='qb4 hide'><a href="https://leahw.github.io/ByteBuilder.html">Reset</a></button>
+<form class="qb4 hide" action="https://leahw.github.io/ByteBuilder.html">
+    <input type="submit" value="Reset">
+</form>
 </div>
 <div class="row container col-md-6"></div>
 <div class="row container col-md-2">
   <button class='qb2'>Calculate</button>
-  <button class='qb3 hide'><a href="https://leahw.github.io/ByteBuilder.html">Reset</a></button>
+  <form class="qb3 hide" action="https://leahw.github.io/ByteBuilder.html">
+    <input type="submit" value="Reset">
+</form>
 </div>
 <div class="row container col-md-12">
 <br>
