--- a/ByteBuilder.html
+++ b/ByteBuilder.html
@@ -267,6 +267,7 @@
    $('.block2').append(utf8[countB]);
    $('.block3').append(utf8[countC]);
    $('.qb1').addClass('hide');
+   $('.qb4').removeClass('hide');
  });
  
    
