--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
   <div class="navbar navbar-default navbar-default-top">
   <div class="container">
-  <a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Page for LeahW</b></a>
+  <a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Repository for LeahW</b></a>
   </div>
   </div>
   <div class="container col-md-6 col-md-offset-1">
