--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <h2><b>GitHub Page and Portfolio for LeahW</b></h2>
+     <h2><b>GitHub Portfolio for LeahW</b></h2>
      <h3>Content frequently changes. Feel free to click around and explore!</h3>
      <br>
   </div>
