--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
   <div class="container col-md-6 col-md-offset-1">
   <div class="hidden-xs hidden-sm">
-    <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" height="369" width="554" class="img-circle" alt="Photo of Kano Raspberry Pi single board computer, taken by @ATLeah"> </img>
+    <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" height="369" width="554" class="img-responsive img-circle" alt="Photo of Kano Raspberry Pi single board computer, taken by @ATLeah"> </img>
    </div> 
   </div>
   <div class="col-md-4 emptyrow"></div>
