--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
   </div>
   </div>
   <div class="container col-md-6 col-md-offset-1">
-  <div class="hidden-xs hidden-sm">
-    <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" class="img-responsive img-circle" alt="Photo of Kano Raspberry Pi single board computer, taken by @ATLeah"> </img>
-   </div> 
-  </div>
+      <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" class="img-responsive img-circle" alt="Photo of Kano Raspberry Pi single board computer, taken by @ATLeah"> </img>
+    </div>
   <div class="col-md-4 emptyrow"></div>
   <div class="container well col-md-4">
    <h3><a href="https://LeahW.github.io/ByteBuilder.html"> ByteBuilder </a></a></h3>
  <br>
  <p> 8-bit to UTF-8 and Decimal converter built using JavaScript.</p>
+  </div>
+  <div class="container col-md-12">
+  <br>
   </div>
   <div class="container well col-md-4">
    <h3><a href="https://LeahW.github.io/regex.html"> Regex </a></a></h3>
